Remove wildcard imports